# ising-config-generator

./: .gitmodules  CMakeLists.txt  README.md  ising-mrg-201911.cpp
tool/: lattice  standards
